--- a/package.json
+++ b/package.json
@@ -3,14 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "npx jest --testTimeout=10000 --forceExit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
+    "express-session": "^1.17.1",
+    "helmet": "^4.2.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "passport": "^0.4.1",
+    "passport-twitter": "^1.0.4",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3",
+    "passport-stub": "^1.1.1",
+    "supertest": "^6.0.1"
   }
 }
