--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "morgan": "~1.9.0",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
-    "pug": "2.0.0-beta11"
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "pug": "2.0.0-beta11",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "jest": "^26.6.3",
