--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "pug": "2.0.0-beta11",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "jest": "^26.6.3",
