--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.17.1",
     "helmet": "^4.2.0",
     "http-errors": "~1.6.2",
+    "jquery": "3.4.1",
     "morgan": "~1.9.0",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
@@ -24,8 +25,13 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/core": "7.1.6",
+    "@babel/preset-env": "7.1.6",
+    "babel-loader": "8.0.4",
     "jest": "^26.6.3",
     "passport-stub": "^1.1.1",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "webpack": "4.26.1",
+    "webpack-cli": "3.1.2"
   }
 }
