--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx jest --testTimeout=10000 --forceExit"
   },
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
@@ -15,11 +16,13 @@
     "helmet": "^4.2.0",
     "http-errors": "~1.6.2",
     "jquery": "3.4.1",
+    "moment-timezone": "^0.5.32",
     "morgan": "~1.9.0",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "popper.js": "^1.16.1",
     "pug": "2.0.0-beta11",
     "sequelize": "^6.3.5",
     "uuid": "^8.3.2"
